--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "dev:exe": "chcp 65001 | vite -m electron",
     "build:exe": "npm run build && npm run before:exe && electron-builder --config=electron-builder-win.json",
     "preview:exe": "npm run build && npm run before:exe && chcp 65001 | electron . prod",
+    "cordova:app": "vite build --outDir ./cordova/www/dist && cd ./cordova/ && cordova platform remove android && cordova platform add android && cordova plugin add cordova-plugin-splashscreen && cordova plugin add cordova-plugin-apkupdater && cordova plugin add cordova-plugin-autostart@2.3.0 && cordova plugin add cordova-custom-config && cordova plugin add cordova-plugin-x-toast && cordova plugin add cordova-plugin-statusbar",
+    "test:app": "npm run cordova:app && cd ./cordova/ && cordova run android --buildConfig=./www/dist/app_config/build.json --release",
+    "build:app": "npm run cordova:app && cd ./cordova/ && cordova build android --buildConfig=./www/dist/app_config/build.json --release",
     "eslint": "eslint ./ --fix --ext .ts,.tsx,.js,.jsx,.vue",
     "prettier": "prettier --write ./**/*.{ts,tsx,js,jsx,vue,html,css,scss,less}",
     "lint": "npm run prettier && npm run eslint",
@@ -42,10 +45,9 @@
     "update:hooks": "npm i js-xhttp js-xxx js-xcall && npm i js-xcmd -D"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.0.1",
-    "@ant-design/pro-components": "^2.4.9",
+    "antd": "^4.24.7",
+    "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "antd": "^5.4.6",
     "electron-updater": "^5.3.0",
     "js-xcall": "^1.3.0",
     "js-xhttp": "^1.5.1",
@@ -83,7 +85,7 @@
     "prettier": "^2.8.8",
     "terser": "^5.17.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.0",
+    "vite": "^3.2.7",
     "vite-plugin-electron": "^0.11.2",
     "vite-plugin-eslint": "^1.8.1"
   },
