--- a/cordova/package.json
+++ b/cordova/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.web.base",
+  "name": "cn.biugle.base",
   "displayName": "HelloCordova",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
