Docs: 增加安装说明
(cherry picked from commit 339a7ec1689eef9e9f836cf9ed6373dcd6c20037)
(cherry picked from commit fdbd262c3a331432fb680a6168a6dddbfd946574)
(cherry picked from commit 289fcc65aae45884cba40d73e7d66b000a2f50a2)

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/biugle/web_base/blob/main/README.md",
   "scripts": {
     "init": "npm i --ignore-scripts",
+    "git": "git init",
     "prepare": "husky install && npm run add-husky-scripts && npm run replace-husky-scripts",
     "add-husky-scripts": "husky add .husky/pre-commit npm_s_run_s_update:hooks && husky add .husky/pre-commit npm_s_run_s_lint && husky add .husky/pre-commit npm_s_run_s_time",
     "replace-husky-scripts": "xcmd replace-file-content .husky/pre-commit _s_ [space]",
