--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "init": "npm i --ignore-scripts",
     "git": "git init",
-    "prepare": "husky install && npm run add-husky-scripts && npm run replace-husky-scripts && npm run lint",
+    "husky": "npm run git && husky install && npm run add-husky-scripts && npm run replace-husky-scripts && npm run lint",
+    "prepare:按需使用(hooks)": "npm run husky",
     "add-husky-scripts": "husky add .husky/pre-commit npm_s_run_s_update:hooks && husky add .husky/pre-commit npm_s_run_s_lint && husky add .husky/pre-commit npm_s_run_s_time",
     "replace-husky-scripts": "xcmd replace-file-content .husky/pre-commit _s_ [space]",
     "dev": "vite",
@@ -43,7 +44,7 @@
     "antd": "^5.4.6",
     "js-xcall": "^1.3.0",
     "js-xhttp": "^1.5.1",
-    "js-xxx": "^1.8.1",
+    "js-xxx": "^1.8.5",
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
     "react-dom": "^17.0.2",
