Feat: 调整整体配置与代码

--- a/.eslintignore
+++ b/.eslintignore
@@ -8,14 +8,18 @@
 **/node_modules/**
 **/dist/**
 **/dist-ssr/**
+**/docs-dist/**
 **/test/**
+**/tests/**
 **/demo/**
+**/logs/**
 **/*.svg
 **/*.toml
 **/*.xml
 **/**.min.*
 .husky/**
 build_exe/**
+build_app/**
 build/**
 cordova/**
 public/lib/**
