--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "git": "git init",
     "husky": "npm run git && husky install && npm run add-husky-scripts && npm run replace-husky-scripts && npm run lint",
     "prepare:按需使用(hooks)": "npm run husky",
-    "add-husky-scripts": "husky add .husky/pre-commit npm_s_run_s_update:hooks && husky add .husky/pre-commit npm_s_run_s_lint && husky add .husky/pre-commit npm_s_run_s_time",
+    "add-husky-scripts": "husky add .husky/pre-commit npm_s_run_s_update:hooks && husky add .husky/pre-commit npm_s_run_s_lint && husky add .husky/pre-commit npm_s_run_s_time && husky add .husky/pre-commit git_s_add_s_.",
     "replace-husky-scripts": "xcmd replace-file-content .husky/pre-commit _s_ [space]",
     "dev": "vite",
     "build": "vite build",
@@ -35,21 +35,33 @@
     "lint": "npm run prettier && npm run eslint",
     "time": "xcmd update-time",
     "clean": "npm cache clean --force && xcmd clean",
+    "lint-staged": "npx lint-staged",
     "update:hooks": "npm i js-xhttp js-xxx js-xcall && npm i js-xcmd -D"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.16",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sigi/core": "2.12.1",
+    "@sigi/devtool": "2.12.1",
+    "@sigi/di": "2.11.3",
+    "@sigi/react": "2.12.2",
+    "@sigi/types": "2.11.3",
+    "ahooks": "^3.8.0",
     "antd": "^5.4.6",
+    "dayjs": "^1.11.11",
     "js-xcall": "^1.3.1",
     "js-xhttp": "^1.6.1",
-    "js-xxx": "^2.2.17",
+    "js-xxx": "^2.2.19",
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -69,14 +81,30 @@
     "eslint-plugin-spellcheck": "0.0.20",
     "eslint-plugin-zob": "^0.4.0",
     "husky": "^8.0.3",
-    "js-xcmd": "^1.5.5",
+    "js-xcmd": "^1.5.6",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lint-staged": "^13.3.0",
     "prettier": "^2.8.8",
     "terser": "^5.17.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1"
   },
-  "time": "2512111519052023"
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,vue,html,css,scss,less}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add ."
+    ]
+  },
+  "packageManager": "npm@8.0.0",
+  "engines": {
+    "react": "<18",
+    "node": ">=14",
+    "pnpm": ">=6.20.0",
+    "npm": ">=8.0.0",
+    "git": ">=2.30.0"
+  },
+  "time": "6037241720062024"
 }
