Feat: 增加 sigi & rxjs 写法

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
