--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "update:hooks": "npm i js-xhttp js-xxx js-xcall && npm i js-xcmd -D"
   },
   "dependencies": {
+    "@abraham/reflection": "0.12.0",
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.16",
     "@emotion/css": "^11.11.2",
@@ -49,12 +50,13 @@
     "@sigi/devtool": "2.12.1",
     "@sigi/di": "2.11.3",
     "@sigi/react": "2.12.2",
+    "@sigi/ssr": "2.13.0",
     "@sigi/types": "2.11.3",
     "ahooks": "^3.8.0",
     "antd": "^5.4.6",
     "dayjs": "^1.11.11",
     "js-xcall": "^1.3.1",
-    "js-xhttp": "^1.6.1",
+    "js-xhttp": "^1.6.3",
     "js-xxx": "^2.2.19",
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
@@ -65,6 +67,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@types/node": "^18.16.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
