--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.52.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.0",
     "rxjs": "^7.8.1"
