--- a/package.json
+++ b/package.json
@@ -45,23 +45,39 @@
     "update:hooks": "npm i js-xhttp js-xxx js-xcall && npm i js-xcmd -D"
   },
   "dependencies": {
+    "@abraham/reflection": "0.12.0",
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.16",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sigi/core": "2.12.1",
+    "@sigi/devtool": "2.12.1",
+    "@sigi/di": "2.11.3",
+    "@sigi/react": "2.12.2",
+    "@sigi/ssr": "2.13.0",
+    "@sigi/types": "2.11.3",
+    "ahooks": "^3.8.0",
     "antd": "^5.4.6",
     "dayjs": "^1.11.11",
     "electron-updater": "^5.3.0",
     "js-xcall": "^1.3.1",
-    "js-xhttp": "^1.6.1",
+    "js-xhttp": "^1.6.3",
     "js-xxx": "^2.2.19",
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.52.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@types/node": "^18.16.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -81,7 +97,7 @@
     "eslint-plugin-spellcheck": "0.0.20",
     "eslint-plugin-zob": "^0.4.0",
     "husky": "^8.0.3",
-    "js-xcmd": "^1.5.6",
+    "js-xcmd": "^1.5.7",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lint-staged": "^13.3.0",
