Fix: vercel  engines bug
(cherry picked from commit 7c48e2bb817fc7791a56d00b5ae107bd1b3e17f0)
(cherry picked from commit b29d6eb1bc10626c219774511bacf5ac6fe6fa14)
(cherry picked from commit 85893999ed1240504ed8dc1e89993d262bc178ce)
(cherry picked from commit c220dddf867ea552197cfa88c1df87fc5893f4b4)

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "replace-husky-scripts": "xcmd replace-file-content .husky/pre-commit _s_ [space]",
     "electron-icon": "electron-icon-builder --input=./public/icon.png --output=./public/electron-icon-builder --flatten",
     "dev": "vite",
-    "build": "vite build",
+    "build": "node -v && vite build",
     "preview": "npm run build && vite preview --host",
     "before:exe": "tsc -p tsconfig.electron.json",
     "dev:exe": "chcp 65001 | vite -m electron",
@@ -117,12 +117,11 @@
       "git add ."
     ]
   },
-  "packageManager": "npm@8.0.0",
   "engines": {
+    "packageManager": "npm@8.0.0",
+    "nodeVersion": "node>=14",
     "react": "<18",
-    "node": ">=14",
     "pnpm": ">=6.20.0",
-    "npm": ">=8.0.0",
     "git": ">=2.30.0"
   },
   "time": "8011281720062024"
