--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "add-husky-scripts": "husky add .husky/pre-commit npm_s_run_s_update:hooks && husky add .husky/pre-commit npm_s_run_s_lint && husky add .husky/pre-commit npm_s_run_s_time && husky add .husky/pre-commit git_s_add_s_.",
     "replace-husky-scripts": "xcmd replace-file-content .husky/pre-commit _s_ [space]",
     "dev": "vite",
-    "build": "vite build",
+    "build": "node -v && vite build",
     "preview": "npm run build && vite preview --host",
     "eslint": "eslint ./ --fix --ext .ts,.tsx,.js,.jsx,.vue",
     "prettier": "prettier --write ./**/*.{ts,tsx,js,jsx,vue,html,css,scss,less}",
@@ -104,12 +104,11 @@
       "git add ."
     ]
   },
-  "packageManager": "npm@8.0.0",
   "engines": {
+    "packageManager": "npm@8.0.0",
+    "nodeVersion": "node>=14",
     "react": "<18",
-    "node": ">=14",
     "pnpm": ">=6.20.0",
-    "npm": ">=8.0.0",
     "git": ">=2.30.0"
   },
   "time": "8011281720062024"
