--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "immer": "9.0.21",
     "@sigi/core": "2.12.1",
     "@sigi/devtool": "2.12.1",
     "@sigi/di": "2.11.3",
